# nomad-mof

./: README.md  nomad.yaml  pyproject.toml
src/nomad_mof/: __init__.py  nomad_plugin.yaml  parser.py  schema.py  utils.py
tests/data/: test_parser.py
