[build-system]
requires = [
    "setuptools>=61.0.0",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "nomad-mof"
dynamic = ["version"]
description = "A plugin for NOMAD containing base sections for metal organing frameworks."
readme = "README.md"
authors = [
    { name = "Dinga Wonanke", email = 'dak52@uclive.ac.nz' },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "nomad-lab>=1.2.1",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "structlog>=22.3.0",
]

[project.license]
file = "LICENSE"

[project.urls]
"Homepage" = "https://github.com/FAIRmat-NFDI/nomad-mof"
"Bug Tracker" = "https://github.com/FAIRmat-NFDI/nomad-mof/issues"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools_scm]
